# DistConv

./: .gitignore  CONTRIBUTORS  LICENSE  README.md  pyproject.toml
distconv/: __init__.py  ddp.py  distconv.py
tests/: conftest.py  test.sh  test_basic.py  test_channels_last.py  test_convtranspose.py  test_ddp_with_distconv.py  test_no_shard.py  test_periodic.py  test_shard_dim_validation.py  test_splitting.py  test_strides.py  utils.py
