[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distconv"
version = "0.1.0"
description = "LBANN distributed convolution (DistConv) library"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = ["torch>=2.5"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/LBANN/DistConv.git"
